@@ -37,7 +37,7 @@ else
 OPT=/noopt/debug
 CFLAGS=/name=(as_is,shortened)/include=([],"../include")\
  /define=("unlink=remove",DEBUGDIR="""GNU$$DEBUGDIR:""",$(DEFS))\
- /warns=(infor=missingreturn)$(OPT)
+ /warns=(infor=(missingreturn,badansialias))$(OPT)
 endif
 
 libbfd.olb: $(OBJS)
