@@ -1,3 +1,8 @@
+2010-11-04  Tristan Gingold  <gingold@adacore.com>
+
+	* makefile.vms (CFLAGS): Make badalias warnings informational.
+	* vms-lib.c (vms_lib_bread): Avoid arithmetic on void pointer.
+
 2010-11-04  Joseph Myers  <joseph@codesourcery.com>
 
 	* elf-attrs.c (_bfd_elf_merge_unknown_attribute_low,
